force-app/main/default/objects/SalesSupportRequest__c/SalesSupportRequest__c.object-meta.xml
<CustomObject>
    <description>作成：山本</description>
    <label>営業サポート依頼</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>営業サポート依頼</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>