force-app/main/default/objects/SalesSupportRequest__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.ABC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABC区分</label>
    <type>Text</type>
</CustomField>