force-app/main/default/objects/SalesSupportRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>営業サポート依頼</relationshipLabel>
    <relationshipName>SalesSupportRequest</relationshipName>
    <type>Lookup</type>
</CustomField>