force-app/main/default/objects/SalesSupportRequest__c/fields/Amount_of_sale_amount__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_sale_amount__c</fullName>
    <description>長谷川</description>
    <label>売却金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>