force-app/main/default/objects/SalesSupportRequest__c/fields/BugContent__c.field-meta.xml
<CustomField>
    <fullName>BugContent__c</fullName>
    <description>長谷川</description>
    <label>不具合内容</label>
    <length>50</length>
    <type>Text</type>
</CustomField>