force-app/main/default/objects/SalesSupportRequest__c/fields/Car_name__c.field-meta.xml
<CustomField>
    <fullName>Car_name__c</fullName>
    <formula>IF( ISBlANK( PurchaseOpportunity__r.CarName__c), PurchaseOpportunity__r.Mst_Models_formula__c ,PurchaseOpportunity__r.CarName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車名</label>
    <type>Text</type>
</CustomField>