force-app/main/default/objects/SalesSupportRequest__c/fields/Car_no__c.field-meta.xml
<CustomField>
    <fullName>Car_no__c</fullName>
    <formula>PurchaseOpportunity__r.CarNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車台番号</label>
    <type>Text</type>
</CustomField>