force-app/main/default/objects/SalesSupportRequest__c/fields/CompleteDate__c.field-meta.xml
<CustomField>
    <fullName>CompleteDate__c</fullName>
    <description>作成：山本</description>
    <label>依頼完了日</label>
    <type>Date</type>
</CustomField>