force-app/main/default/objects/SalesSupportRequest__c/fields/Contract_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_date__c</fullName>
    <description>山本</description>
    <label>契約日</label>
    <type>Date</type>
</CustomField>