force-app/main/default/objects/SalesSupportRequest__c/fields/CS_DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>CS_DeliveryAddress__c</fullName>
    <description>CS依頼の後処理依頼と必要書類案内依頼で入力された送付先住所が転記される。与儀</description>
    <label>送付先住所（CS）</label>
    <type>TextArea</type>
</CustomField>