force-app/main/default/objects/SalesSupportRequest__c/fields/CS_RecipientCompanyName__c.field-meta.xml
<CustomField>
    <fullName>CS_RecipientCompanyName__c</fullName>
    <description>CS依頼の後処理依頼と必要書類案内依頼で入力された送付先宛名が転記される。与儀</description>
    <label>送付先宛名（CS）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>