force-app/main/default/objects/SalesSupportRequest__c/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <description>長谷川</description>
    <label>送付方法</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>郵送（レターパック）</fullName>
            </value>
            <value>
                <fullName>郵送（封筒）</fullName>
            </value>
            <value>
                <fullName>営業手渡し</fullName>
            </value>
            <value>
                <fullName>メール・LINE（PDF）</fullName>
            </value>
            <value>
                <fullName>Freeeサイン</fullName>
            </value>
            <value>
                <fullName>GMOサイン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>