force-app/main/default/objects/SalesSupportRequest__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>IF( CONTAINS(  Owner:User.UserRole.Name   , &quot;マネージャ&quot;), SUBSTITUTE(Owner:User.UserRole.Name, &quot;マネージャ&quot;,&quot;&quot;) ,
IF( AND( CONTAINS(  Owner:User.Department ,&quot;Cコネクト&quot;),NOT( CONTAINS(  Owner:User.UserRole.Name ,&quot;名古屋&quot;))),Owner:User.Department,Owner:User.UserRole.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署</label>
    <type>Text</type>
</CustomField>