force-app/main/default/objects/SalesSupportRequest__c/fields/Destination_classification__c.field-meta.xml
<CustomField>
    <fullName>Destination_classification__c</fullName>
    <description>長谷川</description>
    <label>行先区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社出品</fullName>
            </value>
            <value>
                <fullName>他社オク</fullName>
            </value>
            <value>
                <fullName>直解体</fullName>
            </value>
            <value>
                <fullName>先振り込み承認</fullName>
            </value>
            <value>
                <fullName>先売り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>