force-app/main/default/objects/SalesSupportRequest__c/fields/DocDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DocDeliveryDate__c</fullName>
    <description>長谷川</description>
    <label>書類引渡日</label>
    <type>Date</type>
</CustomField>