force-app/main/default/objects/SalesSupportRequest__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>長谷川</description>
    <label>装備品</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>取扱説明書</fullName>
            </value>
            <value>
                <fullName>整備手帳</fullName>
            </value>
            <value>
                <fullName>保証書(印 有)</fullName>
            </value>
            <value>
                <fullName>保証書(印 無)</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>