force-app/main/default/objects/SalesSupportRequest__c/fields/First_year_registration__c.field-meta.xml
<CustomField>
    <fullName>First_year_registration__c</fullName>
    <description>長谷川</description>
    <label>初年度登録（月）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>１</fullName>
                <label>1月</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2月</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3月</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4月</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5月</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6月</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7月</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8月</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9月</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10月</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11月</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12月</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>