force-app/main/default/objects/SalesSupportRequest__c/fields/IsCallCenter__c.field-meta.xml
<CustomField>
    <fullName>IsCallCenter__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.IsCallCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リユース事業部経由</label>
    <type>Checkbox</type>
</CustomField>