force-app/main/default/objects/SalesSupportRequest__c/fields/ListingEndsDate__c.field-meta.xml
<CustomField>
    <fullName>ListingEndsDate__c</fullName>
    <description>長谷川</description>
    <label>出品終了日</label>
    <type>Date</type>
</CustomField>