force-app/main/default/objects/SalesSupportRequest__c/fields/Mailing_Documents__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Documents__c</fullName>
    <description>与儀</description>
    <label>送付書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>委任状</fullName>
            </value>
            <value>
                <fullName>譲渡証明書</fullName>
            </value>
            <value>
                <fullName>還付委任状</fullName>
            </value>
            <value>
                <fullName>所有権解除依頼書</fullName>
            </value>
            <value>
                <fullName>残債確認依頼書</fullName>
            </value>
            <value>
                <fullName>返送用LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>