force-app/main/default/objects/SalesSupportRequest__c/fields/ModelYearPickList__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList__c</fullName>
    <description>長谷川</description>
    <label>初年度登録(年)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>