force-app/main/default/objects/SalesSupportRequest__c/fields/Navigation__c.field-meta.xml
<CustomField>
    <fullName>Navigation__c</fullName>
    <description>長谷川</description>
    <label>ナビ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>純正</fullName>
            </value>
            <value>
                <fullName>社外</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
                <label>無し</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>