force-app/main/default/objects/SalesSupportRequest__c/fields/owner__c.field-meta.xml
<CustomField>
    <fullName>owner__c</fullName>
    <formula>Owner:User.LastName &amp;&quot; &quot;&amp; Owner:User.FirstName</formula>
    <label>所有者</label>
    <type>Text</type>
</CustomField>