force-app/main/default/objects/SalesSupportRequest__c/fields/Payee_B__c.field-meta.xml
<CustomField>
    <fullName>Payee_B__c</fullName>
    <description>山本</description>
    <label>振込先B</label>
    <length>50</length>
    <type>Text</type>
</CustomField>