force-app/main/default/objects/SalesSupportRequest__c/fields/PaymentInformation_formula__c.field-meta.xml
<CustomField>
    <fullName>PaymentInformation_formula__c</fullName>
    <description>山本</description>
    <formula>IF(  PaymentInformation__c ,&quot;書類確認後入金日のご案内をさせていただきます。&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PaymentInformation_formula</label>
    <type>Text</type>
</CustomField>