force-app/main/default/objects/SalesSupportRequest__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>作成：山本</description>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>営業サポート依頼</relationshipLabel>
    <relationshipName>SalesSupportRequest</relationshipName>
    <type>Lookup</type>
</CustomField>