force-app/main/default/objects/SalesSupportRequest__c/fields/Repair_history__c.field-meta.xml
<CustomField>
    <fullName>Repair_history__c</fullName>
    <label>修復歴</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>