force-app/main/default/objects/SalesSupportRequest__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>作成：山本</description>
    <label>依頼日</label>
    <type>Date</type>
</CustomField>