force-app/main/default/objects/SalesSupportRequest__c/fields/Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Request_Detail__c</fullName>
    <description>作成：山本</description>
    <label>依頼内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>