force-app/main/default/objects/SalesSupportRequest__c/fields/Request_type__c.field-meta.xml
<CustomField>
    <fullName>Request_type__c</fullName>
    <description>作成：山本</description>
    <inlineHelpText>グローバルアクションから作成する場合は、【その他】以外はなるべく選択しないようにしてください。</inlineHelpText>
    <label>依頼種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕入入力依頼</fullName>
            </value>
            <value>
                <fullName>後処理依頼</fullName>
            </value>
            <value>
                <fullName>指示書作成依頼</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>売買契約書の作成依頼</fullName>
            </value>
            <value>
                <fullName>振込申請依頼</fullName>
            </value>
            <value>
                <fullName>打ち消し処理</fullName>
            </value>
            <value>
                <fullName>必要書類案内</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>