force-app/main/default/objects/SalesSupportRequest__c/fields/required_documents__c.field-meta.xml
<CustomField>
    <fullName>required_documents__c</fullName>
    <description>toC用売契の必要書類選択のために作成。山本</description>
    <label>必要書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車検証</fullName>
            </value>
            <value>
                <fullName>自賠責保険証（期限内の物全て）</fullName>
            </value>
            <value>
                <fullName>自動車検査証記録事項</fullName>
            </value>
            <value>
                <fullName>納税証明書（最新年度分）</fullName>
            </value>
            <value>
                <fullName>所有者・使用者印鑑証明書</fullName>
            </value>
            <value>
                <fullName>委任状</fullName>
            </value>
            <value>
                <fullName>譲渡証明書</fullName>
            </value>
            <value>
                <fullName>還付委任状</fullName>
            </value>
            <value>
                <fullName>住民票</fullName>
            </value>
            <value>
                <fullName>住民票の除票</fullName>
            </value>
            <value>
                <fullName>戸籍謄本</fullName>
            </value>
            <value>
                <fullName>戸籍の附票</fullName>
            </value>
            <value>
                <fullName>申請依頼書</fullName>
            </value>
            <value>
                <fullName>リサイクル券</fullName>
            </value>
            <value>
                <fullName>自賠責承認請求書</fullName>
            </value>
            <value>
                <fullName>免許証コピー（表裏）</fullName>
            </value>
            <value>
                <fullName>返信用LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>