force-app/main/default/objects/SalesSupportRequest__c/fields/Return_Documents__c.field-meta.xml
<CustomField>
    <fullName>Return_Documents__c</fullName>
    <description>与儀</description>
    <label>返送書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>印鑑登録証明書（所有者）</fullName>
            </value>
            <value>
                <fullName>印鑑登録証明書（親権者）</fullName>
            </value>
            <value>
                <fullName>納税証明書</fullName>
            </value>
            <value>
                <fullName>車検証</fullName>
            </value>
            <value>
                <fullName>登録識別情報等通知書</fullName>
            </value>
            <value>
                <fullName>自賠責保険証</fullName>
            </value>
            <value>
                <fullName>リサイクル券</fullName>
            </value>
            <value>
                <fullName>戸籍の附票</fullName>
            </value>
            <value>
                <fullName>戸籍謄本</fullName>
            </value>
            <value>
                <fullName>住民票</fullName>
            </value>
            <value>
                <fullName>所有権解除依頼書</fullName>
                <isActive>false</isActive>
                <label>所有権解除依頼書</label>
            </value>
            <value>
                <fullName>残債確認依頼書</fullName>
                <isActive>false</isActive>
                <label>残債確認依頼書</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>