force-app/main/default/objects/SalesSupportRequest__c/fields/Role_formula__c.field-meta.xml
<CustomField>
    <fullName>Role_formula__c</fullName>
    <description>買取商談の所有者ロールを表示。山本</description>
    <formula>PurchaseOpportunity__r.Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロール</label>
    <type>Text</type>
</CustomField>