force-app/main/default/objects/SalesSupportRequest__c/fields/SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業管理</label>
    <referenceTo>SalesManagement__c</referenceTo>
    <relationshipLabel>営業サポート依頼</relationshipLabel>
    <relationshipName>SalesSupportRequest_SalesManagement</relationshipName>
    <type>Lookup</type>
</CustomField>