force-app/main/default/objects/SalesSupportRequest__c/fields/SalesSupport_imfo_formula__c.field-meta.xml
<CustomField>
    <fullName>SalesSupport_imfo_formula__c</fullName>
    <formula>PurchaseOpportunity__r.SalesSupport_imfo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談の「営業サポートメモ」を表示させています。内容の編集は買取商談側で行う必要があります。</inlineHelpText>
    <label>営業サポートメモ</label>
    <type>Text</type>
</CustomField>