force-app/main/default/objects/SalesSupportRequest__c/fields/SupportName_del__c.field-meta.xml
<CustomField>
    <fullName>SupportName_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当サポート</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Department</field>
            <operation>contains</operation>
            <value>営業サポート</value>
        </filterItems>
        <filterItems>
            <field>User.UserCode__c</field>
            <operation>equals</operation>
            <value>H0002772</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesSupportRequest_del</relationshipName>
    <type>Lookup</type>
</CustomField>