force-app/main/default/objects/SalesSupportRequest__c/fields/Tax_payment__c.field-meta.xml
<CustomField>
    <fullName>Tax_payment__c</fullName>
    <description>長谷川</description>
    <label>納税</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>済</fullName>
            </value>
            <value>
                <fullName>未</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>