force-app/main/default/objects/SalesSupportRequest__c/fields/toC_payment_category__c.field-meta.xml
<CustomField>
    <fullName>toC_payment_category__c</fullName>
    <description>toC用売契作成依頼で使用。山本</description>
    <label>支払い区分（toC用）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>振込</fullName>
            </value>
            <value>
                <fullName>相殺</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>