force-app/main/default/objects/SalesSupportRequest__c/fields/toC_repair_history__c.field-meta.xml
<CustomField>
    <fullName>toC_repair_history__c</fullName>
    <description>toC用売契作成依頼で使用。山本</description>
    <label>修復歴（toC用）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>