force-app/main/default/objects/SalesSupportRequest__c/fields/Transfer_day_A__c.field-meta.xml
<CustomField>
    <fullName>Transfer_day_A__c</fullName>
    <description>山本</description>
    <label>振込日A</label>
    <type>Date</type>
</CustomField>