force-app/main/default/objects/SalesSupportRequest__c/fields/Transfer_day_B__c.field-meta.xml
<CustomField>
    <fullName>Transfer_day_B__c</fullName>
    <description>山本</description>
    <label>振込日B</label>
    <type>Date</type>
</CustomField>