force-app/main/default/objects/SalesSupportRequest__c/fields/Transfer_money_A__c.field-meta.xml
<CustomField>
    <fullName>Transfer_money_A__c</fullName>
    <description>山本</description>
    <label>振込金額A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>