force-app/main/default/objects/SalesSupportRequest__c/fields/Transfer_money_B__c.field-meta.xml
<CustomField>
    <fullName>Transfer_money_B__c</fullName>
    <description>山本</description>
    <label>振込金額B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>