force-app/main/default/objects/SalesSupportRequest__c/fields/Transfer_request_free__c.field-meta.xml
<CustomField>
    <fullName>Transfer_request_free__c</fullName>
    <description>山本</description>
    <label>振込申請依頼備考</label>
    <type>TextArea</type>
</CustomField>