force-app/main/default/objects/SalesSupportRequest__c/fields/TransportationDays__c.field-meta.xml
<CustomField>
    <fullName>TransportationDays__c</fullName>
    <formula>IF( NOT( ISBLANK( TEXT( PurchaseOpportunity__r.LandTransportationDay1__c ) ) ) ,
BLANKVALUE( TEXT( PurchaseOpportunity__r.LandTransportationDay3__c ) ,
BLANKVALUE( TEXT( PurchaseOpportunity__r.LandTransportationDay2__c ) ,
BLANKVALUE( TEXT( PurchaseOpportunity__r.LandTransportationDay1__c ) , &quot;&quot; ) ) ) &amp; &quot;/&quot; &amp;
BLANKVALUE( PurchaseOpportunity__r.process3__c ,
BLANKVALUE( PurchaseOpportunity__r.process2__c ,
BLANKVALUE( PurchaseOpportunity__r.process1__c , &quot;&quot; ) ) ) ,
null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>陸運日/処理</label>
    <type>Text</type>
</CustomField>