force-app/main/default/objects/SalesSupportRequest__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>至急</label>
    <type>Checkbox</type>
</CustomField>