force-app/main/default/objects/SalesSupportRequest__c/recordTypes/SalesSupportRequest.recordType-meta.xml
<RecordType>
    <fullName>SalesSupportRequest</fullName>
    <active>true</active>
    <label>営業サポート依頼</label>
</RecordType>