force-app/main/default/objects/SalesSupportRequest__c/listViews/All_sales_support.listView-meta.xml
<ListView>
    <fullName>All_sales_support</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Urgent__c</columns>
    <columns>Request_type__c</columns>
    <columns>Request_Detail__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SupportName_del__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CompleteDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesSupportRequest__c.SalesSupportRequest</value>
    </filters>
    <label>営業サポート全員宛て</label>
</ListView>