force-app/main/default/objects/SalesSupportRequest__c/listViews/All_SalesSupportRequest.listView-meta.xml
<ListView>
    <fullName>All_SalesSupportRequest</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>Department__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Role_formula__c</columns>
    <columns>Urgent__c</columns>
    <columns>Request_type__c</columns>
    <columns>Request_Detail__c</columns>
    <columns>DeliveryMethod__c</columns>
    <columns>Car_name__c</columns>
    <columns>Request_Date__c</columns>
    <columns>TransportationDays__c</columns>
    <columns>LotNo__c</columns>
    <columns>SalesSupport_imfo_formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesSupportRequest__c.SalesSupportRequest</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>センリャク</value>
    </filters>
    <filters>
        <field>CompleteDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>すべての営業サポート依頼</label>
</ListView>